# axum-htmx-google-oauth

./: .env  .gitignore  Cargo.toml  Readme.md  security-analysis-01.md
assets/: index.html
db/: create_data.sh  sqlite.db
db/migrations/: 20240819135742_user.down.sql  20240819135742_user.up.sql
db/migrations_cache/: 20240819154943_sessions.up.sql
src/: api.rs  api2.rs  asset.rs  auth.rs  cachestore.rs  debug.rs  extractors.rs  htmx.rs  htmx_secret.rs  idtoken.rs  image.rs  lib.rs  main.rs  middleware.rs  models.rs  oauth2.rs  oauth2.rs.new  oauth2_google.rs  settings.rs  sign_in_with_google.rs  spa.rs  user.rs
templates/: auth_navbar.login.callback.j2  auth_navbar.login.html.j2  auth_navbar.login.html.redirect.j2  auth_navbar.login.j2  auth_navbar.login.js.j2  auth_navbar.login.js.redirect.j2  auth_navbar.login.oauth2.j2  auth_navbar.logout.j2  auth_refresh_token.j2  content.secret.j2  head.j2  htmx_error.j2  signin.j2  spa.j2  spa_top.j2
tests/: api_tests.rs  asset_tests.rs  htmx_secret_test.rs  htmx_tests.rs  image_tests.rs  spa_tests.rs  user_test.rs
